# clang-tidy-review

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  action.yml  entrypoint.sh  requirements.txt  review.py
.github/workflows/: black.yml  test.yml
post/: Dockerfile  README.md  action.yml  post.py
post/clang_tidy_review/: __init__.py  pyproject.toml
post/clang_tidy_review/clang_tidy_review/: __init__.py  post.py  review.py
tests/: test_review.py
tests/src/: hello.cxx  hello_original.cxx  test_clang_tidy_review.yaml
tests/src/clang-tidy-profile/: 20240521223715110927964-hello.cxx.json
upload/: action.yml
