[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml] >= 6.2",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "clang-tidy-review"
description = "Run clang-tidy as a GitHub action and automatically post warnings as comments"
readme = "README.md"
authors = [{name = "Peter Hill", email = "peter.hill@york.ac.uk"}]
license = {text = "MIT"}
dependencies = [
    "PyGithub ~= 2.1",
    "unidiff ~= 0.6.0",
    "pyyaml ~= 6.0.1",
    "urllib3 ~= 2.2.1",
]
keywords = ["C++", "static-analysis"]
dynamic = ["version"]

[project.urls]
source = "https://github.com/ZedThree/clang-tidy-review"
tracker = "https://github.com/ZedThree/clang-tidy-review/issues"

[project.scripts]
review = "clang_tidy_review.review:main"
post = "clang_tidy_review.post:main"

[project.optional-dependencies]
tests = [
    "pytest >= 3.3.0",
]
lint = [
  "black",
  "ruff",
]

[tool.setuptools]
packages = ["clang_tidy_review"]

[tool.setuptools_scm]
root = "../.."
fallback_version = "0.0.0-dev"

[tool.black]
extend_exclude = "_version.py"

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "ICN",         # flake8-import-conventions
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
  "FURB",        # refurb
]
ignore = [
  "PLR2004",     # magic-comparison
  "B9",          # flake8-bugbear opinionated warnings
  "PLC0414",     # useless-import-alias
  "PLR0913",     # too-many-arguments
  "PLR0917",     # too-many-positional
  "PLR0914",     # too-many-locals
  "PLR0915",     # too-many-statements
  "PLR0912",     # too-many-branches
  "PTH123",      # builtin-open
]
